# cc

./: CLAUDE.md  Makefile  pyproject.toml  run.sh
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: conftest.py  pytest.ini  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  lint.sh  pre-commit-setup.sh  test.sh
